# project

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FULL_ACCELERATION_ROADMAP.md  LICENSE  Makefile  PROJECT_100_PERCENT_FINISH_PLAN.md  PROJECT_COMPLETION_PLAN.md  README.md  SECURITY.md  analyze_bootstrap_metrics.py  analyze_curriculum_metrics.py  compare_runs.py  curriculum_dry_run.py  curriculum_smoke_test.py  pyproject.toml  run_accelerated_curriculum.py  run_bootstrap.py  run_curriculum.py  setup.py  ssd_smoke_test.py  teacher_cache_smoke_test.py  vram_stress_test.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
docs/: architecture.md  development.md
docs/adr/: 0001-record-architecture-decisions.md  README.md
docs/planning/: ACCELERATION_STATUS.md  README.md
scripts/: vast_bootstrap.sh  vast_output_adapter_bootstrap.sh  vast_probe_stage1.sh  vast_setup.sh  vast_stage1_after_bootstrap.sh  vast_status.sh  vast_stop_training.sh
silexcode/: __init__.py  accelerated.py  bootstrap.py  budget.py  checkpoint.py  constants.py  dataset.py  kfac.py  losses.py  model.py  tokenizer.py  train.py  training.py
silexcode/cuda/: bindings.cpp  tlinear.h  tlinear_kernels.cu
tests/: conftest.py  test_accelerated_curriculum.py  test_acceleration_tools.py  test_bootstrap.py  test_checkpoint_roundtrip.py  test_cuda_extension.py  test_dataset_train.py  test_loss_kfac.py  test_tokenizer_constants.py
